k8s/management-service-ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: management-service
  namespace: management
spec:
  selector:
    app: management-service
  ports:
    - port: 8086
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: management-ingress
  namespace: management
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: sigma
    alb.ingress.kubernetes.io/group.order: "5"
spec:
  rules:
    - http:
        paths:
          - path: /api/equipments
            pathType: Prefix
            backend:
              service:
                name: management-service
                port:
                  number: 8086
